...
                _buildSectionTitle('Payment Method', screenWidth),
                SizedBox(height: screenHeight * 0.01),
                _buildSectionTitle('Payment Method', screenWidth),
                SizedBox(height: screenHeight * 0.01),
                _buildPaymentMethod(
                  Icons.payment,
                  'Cash on Delivery',
                  'Pay with cash when the order is delivered.',
                  screenWidth,
                ),
                SizedBox(height: screenHeight * 0.02),
                _buildPaymentMethod(Icons.paypal, 'Paypal', 'Pay with PayPal for secure payment .', screenWidth),
                SizedBox(height: screenHeight * 0.02),
...
                  print('Cancelled: $params');
                },
              ),
        ),
      );
    }
    // ScaffoldMessenger.of(context).showSnackBar(SnackBar(content: Text('Order has been confirmed!')));
    // showDialog(
    //   context: context,
    //   builder: (context) {
    //     return AlertDialog(
    //       shape: RoundedRectangleBorder(borderRadius: BorderRadius.circular(16)),
    //       content: Column(
...
